# gr-ecs

./: CMakeLists.txt  README.md  main.cpp
component/: transform.cpp  transform.hpp
ecs/: component.hpp  entity.cpp  entity.hpp
